Ajout paragraphe conditionnement dans l'optimisation des nvx de gris

--- a/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
@@ -1,7 +1,7 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 \chapter{Ananlyse de mélanges bi-gaussien}
-\lettrine[lines=2, lhang=0.33, loversize=0.25]{D}{ans} tout ce chapitre dédié à l'analyse d'un mélange bi-gaussien sous toutes les coutures, nous considèrerons les mêmes notations que celles utilisées dans le chapitre REFF ??? \todo[noline]{ref chap}. Une gaussienne normalisée est décrite par son écart-type~$\sigma$ et son centre~$c$ (qui est aussi l'espérence notée plutôt $\mu$ lorsqu'on fait des statistiques). Ici on en considère deux~:
+\lettrine[lines=2, lhang=0.33, loversize=0.25]{D}{ans} tout ce chapitre dédié à l'analyse d'un mélange bi-gaussien sous toutes les coutures, nous considèrerons les mêmes notations que celles utilisées dans le chapitre REFF ??? \todo[noline]{ref chap}.
 
 \section{Propriétés d'une gaussienne}
 On considère une gaussienne définie selon deux paramètres, son écart-type~$\sigma$ et son centre~$c$ (qui est aussi l'espérence notée plutôt $\mu$ lorsqu'on fait des statistiques)~:
@@ -13,8 +13,8 @@ g(x)=\dfrac{1}{\sigma \sqrt{2\pi}} \exp\left( \frac{-1}{2}  \left(  \dfrac{x-c}{
 \begin{prop}
 Les dérivées d'une gaussiennes sont données par~:
 \begin{itemize}
-\item pour la dérivée première~: $g'(x)= -\dfrac{x-c}{\sigma^2}g(c), $
-\item pour la dérivée seconde~: $g''(x)= \dfrac{(x-c+\sigma)(x-c-\sigma)}{\sigma^2}g(c). $
+\item pour la dérivée première~: $g'(x)= -\dfrac{x-c}{\sigma^2}g(x), $
+\item pour la dérivée seconde~: $g''(x)= \dfrac{(x-c+\sigma)(x-c-\sigma)}{\sigma^2}g(x). $
 \end{itemize}
 \end{prop}
 
