--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -45,7 +45,7 @@
 \usepackage{rotating}
 
 \usepackage{xcolor}
-%\usepackage{showkeys} %%% Pour faire afficher les label utilisés
+\usepackage{showkeys} %%% Pour faire afficher les label utilisés
 %%%%%\usepackage[plain]{fancyref}
 \usepackage{xr}
 \usepackage{hyperref} %%% Les premieres compilations fournisse une erreur. recompiler plsrs fois ...
